--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -58,10 +58,6 @@
       @media only screen and (max-width:$breakpoint-lg-max) {
         font-size: 14px;
       }
-
-      @media only screen and (max-width: $breakpoint-md-max) {
-        font-size: 12px;
-      }
     }
 
     .social-media {
@@ -70,13 +66,13 @@
     }
 
     .footer-notes {
-      font-size: 10px;
+      font-size: 12px;
       color: $color-primary-text;
       margin-bottom: 0;
       line-height: 1.8;
 
       @media only screen and (max-width: $breakpoint-md-max) {
-        font-size: 8px;
+        font-size: 10px;
       }
     }
   }
