--- a/src/components/StepCard/StepCard.scss
+++ b/src/components/StepCard/StepCard.scss
@@ -23,7 +23,8 @@
     }
 
     &--desc {
-        font-size: 12px;
+        font-size: 14px;
+        line-height: 1.5;
         margin: 0;
         color: $color-white;
     }
